alsa-lib (1.0.12-1) unstable; urgency=low

  * New upstream release

  [ Elimar Riesebieter ]
  * Removed 06_pcm_rate_hwptr_update.dpatch. Applied upstream
  * Bumped compat to 5 and debhelper version >=5.0.37
  * Cleaned out fuzzes and offsets in patches/*
  * Rebuild patches/40_relibtoolise.dpatch

 -- Elimar Riesebieter <riesebie@lxtec.de>  Sun, 03 Sep 2006 15:23:31 +0200

alsa-lib (1.0.11-7) unstable; urgency=medium

  [ Elimar Riesebieter ]
  * Introduced --datadir=\$${prefix}/share in debian/rules. Otherwise soundapps
    are looking in $BUILDDIR/${prefix}/share.

 -- Jordi Mallach <jordi@debian.org>  Sun, 28 May 2006 22:02:37 +0200

alsa-lib (1.0.11-6) unstable; urgency=high

  * debian/patches/11_libtool_version: correctly detect libtool version in
    configure, avoiding some libasound symbols from becoming weak.
    Patch by Adeodato Simó, thanks! (closes: #369040 + 13 more).

 -- Jordi Mallach <jordi@debian.org>  Sun, 28 May 2006 12:02:33 +0200

alsa-lib (1.0.11-5) unstable; urgency=medium

  * debian/rules: Run dh_makeshlibs for the biarch libraries. Thanks,
    Matthias Klose (closes: #366277).
  * Fix FTBFS on systems with automake & autoconf installed, via adding
    AM_MAINTAINER_MODE to configure.in, a full relibtoolisation patch, and
    applying the cross-compiling patch after relibtoolisation
    (thanks Loïc Minier, closes: #368260).
    [debian/rules, debian/patches/05_multiarch.dpatch,
    debian/patches/10_add-maintainer-mode.dpatch, 40_relibtoolise.dpatch,
    41_configure_cross_compile.dpatch]

 -- Jordi Mallach <jordi@debian.org>  Wed, 26 May 2006 10:57:03 +0200

alsa-lib (1.0.11-4) unstable; urgency=low

  * debian/patches/06_pcm_rate_hwptr_update.dpatch: Fix the update of hwptr
    in rate plugin to avoid bad sounds on Ekiga and other applications
    (closes: #367524).
  * Bumped Standard-Version to 3.7.2; no changes needed.

 -- Jordi Mallach <jordi@debian.org>  Fri, 19 May 2006 00:36:26 +0200
