@@ -1,1 +1,0 @@
-libasound2: description-synopsis-starts-with-a-capital-letter
