@@ -133,10 +133,8 @@ endif
 	dh_installdocs -plibasound2
 	dh_installexamples -s
 	dh_installchangelogs -plibasound2 debian/changelog.ALSA
-	install -p -m 0644 -o root -g root debian/libasound2.lintian-overrides \
-		debian/libasound2/usr/share/lintian/overrides/libasound2
-	install -p -m 0644 -o root -g root debian/libasound2-dev.lintian-overrides \
-		debian/libasound2-dev/usr/share/lintian/overrides/libasound2-dev
+	install -p -m 0644 -o root -g root debian/lib64asound2.lintian-overrides \
+		debian/lib64asound2/usr/share/lintian/overrides/lib64asound2
 	dh_strip -s
 	dh_link -s
 	dh_compress -s
@@ -152,9 +150,6 @@ install-indep: build-indep-stamp
 	dh_installdocs -i
 	dh_installexamples -i
 	dh_installchangelogs -plibasound2-doc debian/changelog.ALSA
-	cp -r doc/doxygen/html debian/libasound2-doc/usr/share/doc/libasound2-doc
-	install -p -m 0644 -o root -g root debian/libasound2-doc.lintian-overrides \
-		debian/libasound2-doc/usr/share/lintian/overrides/libasound2-doc
 	dh_compress -i
 	dh_fixperms -i
 
