@@ -7,6 +7,9 @@ alsa-lib (1.0.12-1) unstable; urgency=low
   * Bumped compat to 5 and debhelper version >=5.0.37
   * Cleaned out fuzzes and offsets in patches/*
   * Rebuild patches/40_relibtoolise.dpatch
+  * Removed description-synopsis-starts-with-a-capital-letter lintian overrides.
+    No longer needed
+  * Added lib64asound2.lintian-overrides.
 
  -- Elimar Riesebieter <riesebie@lxtec.de>  Sun, 03 Sep 2006 15:23:31 +0200
 
